feat: applying points of improvement
